Making all responsive

--- a/app/assets/javascripts/spots.js.erb
+++ b/app/assets/javascripts/spots.js.erb
@@ -11,6 +11,12 @@ var yourPositionMarkerLatitude;
 var yourPositionMarkerLongitude;
 var level;
 
+window.addEventListener('resize', centerMap, false);
+
+function centerMap() {
+	map.setCenter(yourPosition);
+}
+
 getSpots();
 
 function getSpots() {
@@ -70,11 +76,12 @@ function addClickEventForEachMarker(marker) {
 		var infoWindowSpotContent = '<a href=/spots/' + spotId + '><img class="marker-spot-photo" src=' + spots[spotId - 1].photo + '></a>';
 
     	var infoWindowSpot = new google.maps.InfoWindow({
-    		content: infoWindowSpotContent
+    		content: infoWindowSpotContent,
+    		maxWidth: 1000
     	});
 
     	infoWindowSpot.open(map, marker);
-    	setTimeout(function() { infoWindowSpot.close(); }, 5000);
+    	//setTimeout(function() { infoWindowSpot.close(); }, 5000);
 	});
 }
 
