--- a/app/views/jams/new.html.erb
+++ b/app/views/jams/new.html.erb
@@ -1,9 +1,10 @@
-<br>
+<h2>New meeting</h2><br><br>
+
 <%= form_for @jam do |f| %>
 	<%= f.text_field :name, class: 'form-control input-correction', :placeholder => 'Title' %><br><br>
 	<%= f.text_field :spot_id, class: 'form-control input-correction', :placeholder => 'Spot ID' %><br><br>
 	<%= f.date_field :date, class: 'form-control input-correction', :placeholder => 'Date' %><br><br>
 	<%= f.time_select :time, class: 'form-control input-correction', :placeholder => 'Time' %><br><br>
-	<%= f.text_field :info, class: 'form-control input-correction', :placeholder => 'Info' %><br><br><br><br>
+	<%= f.text_field :info, class: 'form-control input-correction', :placeholder => 'Info' %><br><br><br>
 	<%= f.submit 'ADD MEETING', class: 'action-elements' %>
 <% end %><br>
