--- a/app/views/jams/show.html.erb
+++ b/app/views/jams/show.html.erb
@@ -3,7 +3,7 @@
 <span class="spot-info default-font-size glyphicon glyphicon-calendar"><span class="default-font-family">&nbsp;<%= @jam.date %></span></span><br><br>
 <span class="spot-info default-font-size glyphicon glyphicon-hourglass"><span class="default-font-family">&nbsp;<%= @jam.time %></span></span><br><br>
 <span class="spot-info default-font-size glyphicon glyphicon-comment"><span class="default-font-family">&nbsp;<%= @jam.info %></span></span><br><br><br>
-<a href="/spots/<%= @spot.id %>"><img class="spot-photo" src="<%= @spot.photo %>"></a><br><br><br><br>
+<a href="/spots/<%= @spot.id %>"><img class="spot-photo" src="<%= @spot.photo %>"></a><br><br>
 
 <h2>Assistants</h2><br>
 
@@ -11,7 +11,7 @@
 	<span class="label label-info default-font-size">
 		<%= Skater.where(id: attendance.skater_id).first.name %> (<%= attendance.role %>)
 	</span><br><br>
-<% end %><br><br>
+<% end %><br>
 
 <% if current_skater %>
 	<% if meeting_joined? %>
@@ -21,4 +21,4 @@
 	<% end %>
 <% else %>
 	<span>You need to <a href="<%= login_path %>">login</a> in order to join a meeting</span>
-<% end %><br><br><br>
+<% end %>
