--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -2,10 +2,9 @@
 	<div class="row">
 		<div id="map-container"></div>
 	</div>
-</div>
-<br><br>
+</div><br>
 <% if current_skater %>
-	<button class="add-spot-here action-elements" data-toggle="modal" data-target="#myModal5">ADD SPOT HERE<br><span class="glyphicon-correction glyphicon glyphicon-map-marker"></span></button>
+	<a class="add-spot-here spots-action-elements" data-toggle="modal" data-target="#myModal5">ADD SPOT HERE<br><span class="glyphicon-correction glyphicon glyphicon-map-marker"></span></a>
 <% end %>
-<button class="nearest-spot action-elements">NEAREST SPOT<br><span class="glyphicon-correction glyphicon glyphicon-resize-small"></span></button>
-<button class="random-spot action-elements">RANDOM SPOT<br><span class="glyphicon-correction glyphicon glyphicon-random"></span></button><br>
+<a class="nearest-spot spots-action-elements">NEAREST SPOT<br><span class="glyphicon-correction glyphicon glyphicon-resize-small"></span></a>
+<a class="random-spot spots-action-elements">RANDOM SPOT<br><span class="glyphicon-correction glyphicon glyphicon-random"></span></a>
