--- a/app/views/jams/index.html.erb
+++ b/app/views/jams/index.html.erb
@@ -1,5 +1,7 @@
+<h2>Meetings</h2><br><br>
+
 <% @jams.each do |jam| %>
 	<a href="/jams/<%= jam.id %>"><span class="label label-info default-font-size"><%= jam.name %></span></a><br><br>
-<% end %><br><br><br>
+<% end %><br>
 
 <a href="/jams/new"><div class="action-elements">NEW MEETING</div></a><br><br>
