--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,6 +1,6 @@
 <br>
 <%= form_for @spot do |f| %>
-	<%= f.text_field :level, :placeholder => 'Level (Beginner, intermediate or advanced)', class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :level, :placeholder => 'Level (Low, medium or high)', class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :photo, :placeholder => 'URL of ', class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :latitude, :value => @latitude , :placeholder => 'Latitude', :readonly => true, class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :longitude, :value => @longitude , :placeholder => 'Longitude', :readonly => true, class: 'form-control input-correction' %><br><br>
