--- a/app/views/jams/new.html.erb
+++ b/app/views/jams/new.html.erb
@@ -1,4 +1,4 @@
-<h2>New meeting</h2><br><br>
+<br><h2 class="logo">New meeting</h2><br><br>
 
 <%= form_for @jam do |f| %>
 	<%= f.text_field :name, class: 'form-control input-correction', :placeholder => 'Title' %><br><br>
