--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,9 +75,9 @@
 		      </div>
 		      <div class="modal-body">
 		      	<div class="btn-group challenge-skaters">
-		      		<button type="button" class="btn btn-default" data-role="Skater">Skater</button><br>
-		      		<button type="button" class="btn btn-default" data-role="Learner">Learner</button><br>
-		      		<button type="button" class="btn btn-default" data-role="Teacher">Teacher</button><br>
+		      		<button type="button" class="btn btn-default" data-role="Skater">Skater</button>
+		      		<button type="button" class="btn btn-default" data-role="Learner">Learner</button>
+		      		<button type="button" class="btn btn-default" data-role="Teacher">Teacher</button>
 		      		<button type="button" class="btn btn-default" data-role="Spectator">Spectator</button>
   			  	</div><br><br>		      	
 			  </div>
