--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,19 +1,13 @@
-<h2>Spot <%= @spot.id %></h2><br>
-
-<div class="row">
-	<span class="spot-info glyphicon glyphicon-map-marker col-xs-12"><span class="default-font-family">&nbsp;<%= @spot.address %></span></span>
+<br><br><div class="row">
+	<span class="spot-info glyphicon glyphicon-map-marker col-xs-12"><span class="default-font-family">&nbsp;<%= @spot.address %></span></span><br><br>
 	<span class="spot-info glyphicon glyphicon-star col-xs-12"><span class="default-font-family">&nbsp;<%= @spot.level %></span></span>
 </div><br><br>
-<img class="spot-photo" src="<%= @spot.photo %>"><br><br><br>
+<img class="spot-photo" src="<%= @spot.photo %>">
+
+<h2 class="logo">Videos</h2><br>
 
 <div class="row">
 	<% @spot_tricks.each do |spot_trick| %>
-		<div class="trick-info">
-			<span class="label label-info default-font-size skater-trick glyphicon glyphicon-user"> <%= skater_name spot_trick.skater_id %></span>
-			<% if spot_trick.average_rating != nil %>
-				<span class="label label-danger default-font-size trick-rating glyphicon glyphicon-heart"> <%= spot_trick.average_rating %></span>
-			<% end %>	
-		</div><br>
 		<div class="trick panel panel-default">
 			<div class="panel-body">
 				<iframe class="trick-video" src="<%= spot_trick.video %>/embed/simple"></iframe>
@@ -33,7 +27,13 @@
 					<span>You need to <a href="<%= login_path %>">login</a> in order to rate a video</span>
 				<% end %>
 			</div>
-		</div><br><br>
+		</div>
+		<div class="trick-info">
+			<span class="label label-info default-font-size skater-trick glyphicon glyphicon-user"> <%= skater_name spot_trick.skater_id %></span>
+			<% if spot_trick.average_rating != nil %>
+				<span class="label label-danger default-font-size trick-rating glyphicon glyphicon-heart"> <%= spot_trick.average_rating %></span>
+			<% end %>	
+		</div><br><br><br><br>
 	<% end %>
 </div>
 
