--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,13 +23,21 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: Roboto;
 	text-align: center;
 	border-top: 4px solid #337ab7;
 }
 
 .logo {
 	font-family: SkateFont;
+}
+
+a.logo {	
 	font-size: 40px;
+}
+
+h2.logo {
+	color: grey;
 }
 
 .navigation-elements {
@@ -85,8 +93,8 @@ body {
 }
 
 #map-container {
-	height: 550px;
-	margin: 0 5%;
+	height: 450px;
+	margin: 25px 5%;
 	border-radius: 3px;
 }
 
@@ -105,19 +113,21 @@ body {
 .spot-photo {
 	max-width: 100%;
 	border-radius: 3px;
+	margin-bottom: 50px;
 }
 
 .hearts {
 	cursor: pointer;
 }
 
-.challenges-completed {
-	float: left;
-}
-
 .challenge-challenge,
 .footer-correction {
 	text-align: center;
+}
+
+.primary-footer {
+	margin-top: 50px;
+	margin-bottom: 25px;
 }
 
 a, a:hover, a:focus, a:visited {
@@ -154,7 +164,7 @@ a, a:hover, a:focus, a:visited {
 }
 
 @media all and (max-width: 768px) {
-	.logo {
+	a.logo {
 		font-size: 24px;
 	}
 
@@ -163,25 +173,23 @@ a, a:hover, a:focus, a:visited {
 	}
 
 	.trick {
-		margin: 0 5%;
+		margin-left: 5%;
+		margin-right: 5%;
 	}
 
 	.trick-video {
-		width: 250px;
+		width: 100%;
 		height: 300px;
 		border: 0;
-	}
-
-	.tab-pane {
-		width: 400px;
 	}
 
 	.hearts {
 		width: 40px;
 	}
 
-	.challenges-completed {
-		min-width: 50px;
+	.challenge-skaters button[data-role] {
+		clear: both;
+		width: 100%;
 	}
 }
 
